# poly

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  context.md  docker-compose.yml
docs/bench/: bench-poly-net.sh
docs/nginx/: poly-status.conf
docs/profile/: poly-tui-remote.ps1  poly-tui-remote.sh
docs/superpowers/mockups/: 2026-05-09-backtest-report-preview.html
docs/superpowers/plans/: 2026-05-06-poly-tui-balance-starter.md  2026-05-09-backtest-framework.md  2026-05-09-market-watch-strip.md  2026-05-09-poly-trader-martingale.md  2026-05-10-backtest-oracle-noise.md  2026-05-10-real-trade-backtest.md  2026-05-10-trader-maker-mode.md  2026-05-10-trader-tp-sl.md  2026-05-10-tui-positions.md  2026-05-10-window-minutes.md  2026-05-11-trader-hold-early-exit.md
docs/superpowers/specs/: 2026-05-06-poly-tui-balance-starter-design.md  2026-05-09-backtest-framework-design.md  2026-05-09-market-watch-strip-design.md  2026-05-09-poly-trader-martingale-design.md  2026-05-10-backtest-oracle-noise-design.md  2026-05-10-real-trade-backtest-design.md  2026-05-10-trader-maker-mode-design.md  (+3 more)
docs/systemd/: poly-trader.service
src/: app.rs  cache.rs  clob.rs  config.rs  domain.rs  input.rs  lib.rs  positioner.rs  positions.rs  refresher.rs  ui.rs
src/adapters/: mod.rs  polymarket_positions_wrapper.rs  redis_positions_wrapper.rs
src/backtest/: config.rs  exit_rule.rs  mod.rs  oracle.rs  report.rs  runner.rs  stats.rs
src/snapshots/: poly_tui__ui__tests__balance_no_positions.snap  poly_tui__ui__tests__balance_no_positions.snap.new  poly_tui__ui__tests__balance_one_losing.snap  poly_tui__ui__tests__balance_one_losing.snap.new  poly_tui__ui__tests__balance_one_winning.snap  poly_tui__ui__tests__balance_one_winning.snap.new  poly_tui__ui__tests__balance_two_positions.snap  poly_tui__ui__tests__balance_two_positions.snap.new  poly_tui__ui__tests__market_diff_rounds_to_zero.snap  poly_tui__ui__tests__market_diff_rounds_to_zero.snap.new  poly_tui__ui__tests__market_full.snap.new  poly_tui__ui__tests__market_gamma_stale.snap  poly_tui__ui__tests__market_gamma_stale.snap.new  poly_tui__ui__tests__market_negative_diff.snap  poly_tui__ui__tests__market_negative_diff.snap.new  poly_tui__ui__tests__market_no_data.snap  poly_tui__ui__tests__market_no_data.snap.new  poly_tui__ui__tests__market_only_current.snap  poly_tui__ui__tests__market_only_current.snap.new  poly_tui__ui__tests__market_rolling.snap  poly_tui__ui__tests__market_rolling.snap.new  poly_tui__ui__tests__market_rpc_stale.snap  poly_tui__ui__tests__market_rpc_stale.snap.new  poly_tui__ui__tests__trader_lagging.snap  poly_tui__ui__tests__trader_lagging.snap.new  poly_tui__ui__tests__trader_long_log.snap  poly_tui__ui__tests__trader_long_log.snap.new  poly_tui__ui__tests__trader_not_started.snap  poly_tui__ui__tests__trader_not_started.snap.new  poly_tui__ui__tests__trader_stopped.snap  poly_tui__ui__tests__trader_stopped.snap.new  poly_tui__ui__tests__trader_with_events.snap  poly_tui__ui__tests__trader_with_events.snap.new  poly_tui__ui__tests__ui_failure.snap  poly_tui__ui__tests__ui_failure.snap.new  poly_tui__ui__tests__ui_no_balance.snap  poly_tui__ui__tests__ui_no_balance.snap.new  poly_tui__ui__tests__ui_with_balance.snap  poly_tui__ui__tests__ui_with_balance.snap.new
src/trader/: config.rs  errors.rs  event.rs  executor.rs  exit_watcher.rs  ladder.rs  maker.rs  market.rs  mod.rs  momentum_gate.rs  order_events.rs  price.rs  resolver.rs  rsi_gate.rs  scheduler.rs  state.rs  window.rs
src/tui/: events.rs  market_watch.rs  mod.rs
tests/: backtest_smoke.rs  bdd.rs  cache_integration.rs  chainlink_integration.rs  e2e_trader.rs  e2e_tui.rs  maker_integration.rs  positions_integration.rs  real_trade_backtest.rs  trader_market_integration.rs  trader_state_integration.rs
tests/features/: balance.feature  trader.feature
tests/support/: fake_fetcher.rs  memory_cache.rs  mod.rs
(+15 files in other folders)
